fix a problem with the header scrolling out of view, fix an animation problem with the header

--- a/cli/src/js/style.css
+++ b/cli/src/js/style.css
@@ -152,34 +152,6 @@ body,
   min-width: 360px;
   margin: auto;
 }
-@media only screen and (max-width: 600px) {
-  body {
-    margin: 0;
-    overflow: hidden;
-  }
-  .primary-card {
-    width: 100%;
-    height: 100vh;
-    padding: 0;
-    overflow: hidden;
-    min-width: 100px;
-  }
-  .primary-card .content {
-    width: 100% !important;
-    height: 93vh !important;
-  }
-  .primary-card .content .everything {
-    padding: 0;
-    width: 100% !important;
-    height: 100vh;
-  }
-  .primary-card .content .everything-feed {
-    padding: 0;
-    width: 100% !important;
-    height: 600px;
-    margin-top: 100px !important;
-  }
-}
 .primary-card .content {
   position: relative;
   width: 350px;
@@ -257,12 +229,40 @@ body,
   margin: 10px auto;
   text-align: center;
 }
+@media only screen and (max-width: 600px) {
+  body {
+    margin: 0;
+    overflow: hidden;
+  }
+  .primary-card {
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+    overflow: hidden;
+    min-width: 100px;
+  }
+  .primary-card .content {
+    width: 100% !important;
+    height: 93vh !important;
+  }
+  .primary-card .content .everything {
+    padding: 0;
+    width: 100% !important;
+    height: 100vh;
+  }
+  .primary-card .content .everything-feed {
+    padding: 0;
+    width: 100% !important;
+    height: 600px;
+    margin-top: 100px !important;
+  }
+}
 
 /* css/header.css */
 .primary-card #primary-header {
   display: block;
   color: white;
-  mix-blend-mode: multiply;
+  mix-blend-mode: normal;
   width: 100%;
   height: 60px;
   background-color: black;
@@ -272,9 +272,6 @@ body,
   left: 0;
   display: flex;
   justify-content: space-between;
-}
-.primary-card header.disable-transparent-icons {
-  mix-blend-mode: normal !important;
 }
 header.header-visible {
   opacity: 1;
@@ -437,6 +434,19 @@ header.header-invisible {
 }
 #full-nav .credits {
   font-size: x-small;
+}
+@media only screen and (max-width: 600px) {
+  .primary-card #primary-header {
+    position: fixed;
+  }
+  .primary-card #full-header {
+    position: fixed;
+  }
+  .primary-card #full-header.expanded {
+    height: 93vh !important;
+  }
+}
+; {
 }
 
 /* css/form.css */
