--- a/js/css/header.css
+++ b/js/css/header.css
@@ -1,8 +1,9 @@
 
+
 .primary-card #primary-header{
     display: block;
     color: white;
-    mix-blend-mode: multiply;
+    mix-blend-mode: normal;
     width: 100%;
     height: 60px;
     background-color: black;
@@ -14,9 +15,11 @@
     justify-content: space-between;
 }
 
+/*
 .primary-card header.disable-transparent-icons{
     mix-blend-mode: normal !important;
 }
+*/
 
 header.header-visible{
     opacity: 1;
@@ -208,3 +211,20 @@ header.header-invisible{
 #full-nav .credits{
     font-size: x-small;
 }
+
+
+@media only screen and (max-width: 600px) {
+
+    .primary-card #primary-header{
+        position: fixed;
+    }
+
+    .primary-card #full-header{
+        position: fixed;
+    }
+
+    .primary-card #full-header.expanded{
+        height: 93vh !important;
+    }
+
+};
